2009-11-23  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42113
	* gcc.target/alpha/pr42113.c: New test.

2009-11-20  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/42090
	* gfortran.dg/direct_io_11.f90: New test.

2009-11-13  Jason Merrill  <jason@redhat.com>

	PR c++/21008, DR 515
	* g++.dg/template/inherit4.C: New.
	* g++.dg/lookup/scoped8.C: Adjust.

2009-11-12  Jason Merrill  <jason@redhat.com>

	PR c++/37037
	* g++.dg/template/typedef21.C: New.

2009-11-09  Jason Merrill  <jason@redhat.com>

	PR c++/41972
	* g++.dg/template/ref4.C: New.

2009-11-04  Jason Merrill  <jason@redhat.com>

	PR c++/36912
	* g++.dg/init/static-init2.C: New.

2009-11-05  Uros Bizjak  <ubizjak@gmail.com>

	PR target/41900
	* gcc.target/i386/pr41900.c: New test.

2009-11-04  Jason Merrill  <jason@redhat.com>

	PR c++/35067
	* g++.dg/abi/thunk5.C: New.

2009-11-04  Dodji Seketeli  <dodji@redhat.com>

	Revert fix for PR c++/37093
	* g++.dg/other/ptrmem10.C: Revert.
	* g++.dg/other/ptrmem11.C: Likewise.

2009-10-28  Jason Merrill  <jason@redhat.com>

	PR c++/41876
	* g++.dg/parse/eh-decl.C: New.

2009-11-03  Dodji Seketeli  <dodji@redhat.com>

	PR c++/37093
	* g++.dg/other/ptrmem10.C: New test.
	* g++.dg/other/ptrmem11.C: Likewise.

2009-10-14  Hans-Peter Nilsson  <hp@axis.com>

	PR target/38948
	* gcc.dg/torture/pr38948.c: New test.

2009-10-12  Hans-Peter Nilsson  <hp@axis.com>

	PR target/26515
	* gcc.dg/torture/pr26515.c: New test.

2009-10-05  Tobias Burnus  <burnus@net-b.de>

	PR fortran/41479
	* gfortran.dg/intent_out_5.f90: New test.

2009-10-01  Tobias Burnus  <burnus@net-b.de>

	PR fortran/41515
	* gfortran.dg/parameter_array_init_5.f90: New test.

2009-09-30  Uros Bizjak  <ubizjak@gmail.com>

	PR target/22093
	* gcc.target/alpha/pr22093.c: New test.

2009-09-23  Uros Bizjak  <ubizjak@gmail.com>

	PR c/39779
	* gcc.c-torture/compile/pr39779.c: New test.

2009-09-21  Janis Johnson  <janis187@us.ibm.com>

	PR c/41049
	* gcc.dg/dfp/pr41049.c: New test.
