@@ -1,3 +1,8 @@
+2009-12-23  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR libfortran/PR42422
+	* gfortran.dg/list_read_10.f90:  New test.
+
 2009-11-23  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/42113
